--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 
+/*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body {
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #b3cdd1, #9fa4c4);
     }
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login>div#imagem {
@@ -21,14 +23,16 @@
     }
 }
 
+/*DESKTOP*/
 @media screen and (min-width: 992px) {
 
     body {
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #b3cdd1, #9fa4c4);
     }
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login>div#imagem {
@@ -47,6 +51,7 @@
     }
 
     div#formulario>p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
