--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
+/* Paleta de cores */
 /*
-Paleta de cores
-verde: #49a09d
-lilas: #5f2c82
+rosa claro: #f2d9e6
+rosa médio: #edafb8
+verde claro: #a3d2ca
+verde médio: #6d9c9b
 */
 
 * {
@@ -13,8 +15,10 @@ lilas: #5f2c82
     box-sizing: border-box;
 }
 
-body, html {
-    background-color: #5f2c82;
+body,
+html {
+    background-color: linear-gradient(to top, #b3cdd1, #9fa4c4);
+    ;
     height: 100vh;
     width: 100vw;
 }
@@ -29,24 +33,32 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
-    background-color: white;
+    background-color: linear-gradient(to top, #b3cdd1, #9fa4c4);
+    ;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width .1s, height .1s;
     transition-timing-function: ease;
+
 }
 
 section#login>div#imagem {
-    background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+    display: block;
+    background: #a3d2ca url(../imagens/metal.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
+}
+
+section#login>div#formulario {
+    display: block;
+    padding: 10px;
 }
 
 div#formulario>h1 {
@@ -58,12 +70,51 @@ div#formulario>p {
     font-size: 0.8em;
 }
 
+form>div.campo {
+    background-color: #6d9c9b;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border: 2px solid #6d9c9b;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo>label {
+    display: none;
+}
+
+div.campo>i {
+    color: linear-gradient(to top, #b3cdd1, #9fa4c4);
+    ;
+    font-size: 1.9em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo>input {
+    background-color: linear-gradient(to top, #b3cdd1, #9fa4c4);
+    ;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+}
+
+div.campo>input:focus-within {
+    background-color: white;
+    border: none;
+}
+
 form>input[type=submit] {
     display: block;
     font-size: 1em;
     width: 100%;
     height: 40px;
-    background-color: #49a09d;
+    background-color: #a3d2ca;
     border: none;
     color: white;
     border-radius: 5px;
@@ -71,7 +122,7 @@ form>input[type=submit] {
 }
 
 form>input[type=submit]:hover {
-    background-color: #2d6462;
+    background-color: #6d9c9b;
 }
 
 form>a.botao {
@@ -80,32 +131,20 @@ form>a.botao {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    background-color: white;
-    color: #2d6462;
+    background-color: #b8d8d6;
+    color: #404040;
     padding-top: 5px;
     margin-top: 5px;
-    border: 1px solid #49a09d;
+    border: 1px solid #a3b7b5;
     border-radius: 7px;
     text-decoration: none;
 }
 
 form>a.botao:hover {
-    background-color: #6cd3cf;
+    background-color: #d9e9e7;
 }
 
 form>a.botao>i {
     font-size: 0.8em;
-}
-
-form>div.campo {
-    background-color: #5f2c82;
-    width: 100%;
-    display: block;
-    height: 40px;
-    border-radius: 5px;
-    margin: 5px 0px;
-}
-
-div.campo>label {
-    display: none;
+    color: #404040;
 }
